# braindecode

./: .codacy.yaml  .gitignore  .pre-commit-config.yaml  .travis.yml  ATCNet_scripted.pt  AttentionBaseNet_scripted.pt  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  EEGConformer_scripted.pt  EEGITNet_scripted.pt  EEGNeX_scripted.pt  EEGNetv4_scripted.pt  EEGTCNet_scripted.pt  HUGGINGFACE_HUB_INTEGRATION.md  IMPLEMENTATION_STATUS.md  LICENSE.txt  MANIFEST.in  MSVTNet_scripted.pt  NOTICE.txt  PR_SUMMARY.md  README.md  README.rst  RELEASE_NOTES_v1.4.0.md  SCCNet_scripted.pt  SPARCNet_scripted.pt  SincShallowNet_scripted.pt  SleepStagerBlanco2020_scripted.pt  SleepStagerChambon2018_scripted.pt  SleepStagerEldele2021_scripted.pt  SyncNet_scripted.pt  TIDNet_scripted.pt  TSceptionV1_scripted.pt  bandit.yml  benchmark_filterbank.py  codecov.yml  conf.py  drafr.py  draft.py  environment.yml  (+20 more)
.circleci/: artifact_path  config.yml
.github/scripts/: convert_to_notebook.py
.github/workflows/: docs.yml  flake8.yaml  flake8check.yaml  install-and-test.yml  install.yml  link-check.yml  link-to-doc.yaml  main.yml  monthly-release.yml  pre-commit.yaml  push-artifact-to-circleci.yml  release.yml  test.yml  tests-and-docs.yml  tests-conda.yml  tests.yml  whats-new.yml
benchmarks/: bench_augmentation_growth.py
braindecode/: __init__.py  _api.py  _tutorial_hub.py  augmented_training_manager.py  callbacks.py  classifier.py  eegneuralnet.py  eegneuralnetwork.py  iterators.py  losses.py  monitors.py  preprocessors.py  pretrained.py  regressor.py  scoring.py  transformers.py  trial_segment.py  util.py  version.py  weights.py  windowers.py
braindecode/augment/: __init__.py  base.py  mixup_loss.py
braindecode/augmentation/: __init__.py  _functionals.py  augmented_training_manager.py  base.py  functional.py  functionals.py  global_variables.py  preliminaries.py  transform_class.py  transforms.py
braindecode/datasets/: __init__.py  base.py  bbci.py  bcic_iv_2a.py  bcicomp.py  bids.py  bids_format.py  bnci.py  chb_mit.py  collate.py  croppedxy.py  dataset.py  datasets.py  ecog.py  ecog_bci_competition.py  experimental.py  hub.py  hub_mixin.py  hub_validation.py  lazy_dataset.py  mne.py  moabb.py  moabb_datasets.py  multiple.py  nmt.py  registry.py  sensor_positions.py  siena.py  sleep_physio_challe_18.py  sleep_physionet.py  sleep_physionet18.py  specific_datasets.py  transform_class.py  transform_classes.py  tuh.py  utils.py  xy.py
braindecode/datautil/: __init__.py  channel_utils.py  hub_formats.py  hub_validation.py  iterators.py  lazy_iterators.py  loader.py  mne.py  preprocess.py  serialization.py  signal_target.py  signalproc.py  splitters.py  transform.py  transform_side_funcs.py  transformers.py  transforms.py  trial_segment.py  util.py  windowers.py  xy.py
braindecode/datautils/: iterators.py  signal_target.py
braindecode/experiments/: __init__.py  classifier.py  experiment.py  loggers.py  monitors.py  scoring.py  stopcriteria.py
braindecode/functional/: __init__.py  functions.py  initialization.py
braindecode/mne_ext/: __init__.py  signalproc.py
braindecode/models/: __init__.py  _ctnet.py  _mvpformer_convert.py  atcnet.py  attentionbasenet.py  attn_sleep.py  base.py  basenet.py  bendr.py  biot.py  brainmodule.py  brainomni.py  cbramod.py  chambonsleepstager.py  codebrain.py  config.py  conformer.py  constraints.py  contrawr.py  ctnet.py  dance.py  deep4.py  deepmeg.py  deeprecurrent.py  deepsleepnet.py  dgcnn.py  dilated_conv_decoder.py  dilated_conv_decoder_adapted.py  dilated_conv_decoder_braindecode.py  dilated_conv_decoder_original.py  dilated_conv_decoder_simplify.py.py  eegchannelnet.py  eegconformer.py  eegdeformer.py  eegdeformer2.py  eegdino.py  eeginception.py  eeginception_erp.py  eeginception_mi.py  eegitnet.py  (+70 more)
braindecode/modules/: __init__.py  activation.py  attention.py  blocks.py  convolution.py  dance_modules.py  filter.py  interpolation.py  layers.py  linear.py  merger.py  modules.py  parametrization.py  quantization.py  stats.py  util.py  wrapper.py
braindecode/preprocessing/: __init__.py  eegprep_preprocess.py  ica.py  mne_preprocess.py  preprocess.py  preprocess_classes.py  util.py  windowers.py
braindecode/samplers/: base.py  (+3 more)
docs/: Makefile  api.rst  braindecode.configs.rst  braindecode.csp.rst  braindecode.datasets.rst  braindecode.experiments.rst  braindecode.mywyrm.rst  braindecode.test.rst  braindecode.torchext.rst  cite.rst  conf.py  download_mne_references.py  help.rst  index.rst  install.rst  links.inc  models_summary.rst  prepare_summary_tables.py  references.bib  requirements.txt  sg_execution_times.rst  starting.rst  whats_new.rst
examples/: README.rst  bcic_iv_2a.py  bcic_iv_2a_cropped.py  bcic_iv_2a_trial.py  benchmark_lazy_eager_loading.py  benchmark_preprocessing.py  moabb_bcic_iv_2a_example.py  moabb_class_example.py  parallel_pipeline.py  perturbation.py  plot_bcic_iv_2a_moabb.py  plot_bcic_iv_2a_moabb_cropped.py  plot_bcic_iv_2a_moabb_trial.py  plot_bcic_iv_4_ecog.py  plot_bcic_iv_4_ecog_cropped.py  plot_bcic_iv_4_ecog_trial.py  plot_benchmark_preprocessing.py  plot_custom_dataset_example.py  plot_data_augmentation.py  plot_data_augmentation_search.py  plot_dataset_example.py  plot_eager_loading.py  plot_fake_model.py  plot_how_train_test_and_tune.py  plot_hyperparameter_tuning_with_scikit-learn.py  plot_lazy_loading.py  plot_lazy_vs_eager_loading.py  plot_load_save_datasets.py  plot_mne_dataset_example.py  plot_moabb_dataset_example.py  plot_regression.py  plot_relative_positioning.py  plot_skorch_crop_decoding.py  plot_skorch_trial_decoding.py  plot_sleep_staging.py  plot_sleep_staging_chambon2018.py  plot_sleep_staging_eldele2021.py  plot_sleep_staging_sequences.py  plot_sleep_staging_sequences_usleep.py  plot_sleep_staging_usleep.py  (+10 more)
scripts/: check_codebrain_weights.py  convert_brainomni_weights.py  dance_parity_check.py  monthly_release.py  push_eegpt_to_hub.py  release_script.py  train_and_push_tutorial_checkpoints.py
test/: __init__.py  conftest.py  dataset.py  get_dummy_sample.py
tmpnoteb_hidefromalex/: Untitled1.ipynb
(+304 files in other folders)
