[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braindecode"
dynamic = ["version"]
description = "Deep learning software to decode EEG, ECG or MEG signals"
authors = [{ name = "Robin Tibor Schirrmeister", email = "robintibor@gmail.com" }]
maintainers = [
    { name = "Alexandre Gramfort", email = "agramfort@meta.com" },
    { name = "Bruno Aristimunha Pinto", email = "b.aristimunha@gmail.com" },
    { name = "Robin Tibor Schirrmeister", email = "robintibor@gmail.com" }
]
license = { text = "BSD-3-Clause" }
keywords = [
    "python",
    "deep-learning",
    "neuroscience",
    "pytorch",
    "meg",
    "eeg",
    "neuroimaging",
    "electroencephalography",
    "magnetoencephalography",
    "electrocorticography",
    "ecog",
    "electroencephalogram"
]
classifiers = [
    'Development Status :: 3 - Alpha',
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    'Topic :: Software Development :: Build Tools',
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    'mne>=1.10.0',
    'mne_bids>=0.16',
    'numpy',
    'pandas',
    'scipy',
    'matplotlib',
    'h5py',
    'skorch>=1.2.0',
    "torch>=2.0,<3.0",
    "torchaudio>=2.0,<3.0",
    'einops',
    'joblib',
    'torchinfo~=1.8',
    'wfdb',
    'h5py',
    'linear_attention_transformer',
    'docstring_inheritance',
]
[project.urls]
homepage = "https://braindecode.org"
repository = "https://github.com/braindecode/braindecode"
documentation = "https://braindecode.org/stable/index.html"

[project.optional-dependencies]
moabb = ["moabb>=1.2.0"]
tests = [
    'pytest',
    'pytest-cov',
    'codecov',
    'pytest_cases',
    'mypy'
]
docs = [
    'sphinx_gallery',
    'sphinx_rtd_theme',
    'sphinx-autodoc-typehints',
    'sphinx-autobuild',
    'sphinxcontrib-bibtex',
    'sphinx_sitemap',
    'pydata_sphinx_theme',
    'numpydoc',
    'memory_profiler',
    'pillow',
    'ipython',
    'sphinx_design',
    'lightning',
    'seaborn',
    'pre-commit',
    'openneuro-py',
    'plotly',
]
all = [
    "braindecode[moabb,tests,docs]"
]

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
version = {attr = "braindecode.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["braindecode*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff]
lint.ignore-init-module-imports = true
line-length = 88
target-version = "py311"


[tool.isort]
skip = [".gitignore"]
skip_glob = ["test/*", "examples/*"]
py_version = 311
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["braindecode"]
lines_between_sections = 1

[tool.pytest.ini_options]
testpaths = [
  "test",
]
# which files count as test modules
python_files = ["test_*.py", "*_test.py"]
# which functions inside them count as tests
python_functions = ["test_*"]
