[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braindecode"
dynamic = ["version"]
description = "Deep learning software to decode EEG, ECG or MEG signals"
authors = [
    { name = "Robin Tibor Schirrmeister", email = "robintibor@gmail.com" },
    { name = "Bruno Aristimunha Pinto", email = "b.aristimunha@gmail.com" },
    { name = "Alexandre Gramfort", email = "agramfort@meta.com" },
]
maintainers = [
    { name = "Alexandre Gramfort", email = "agramfort@meta.com" },
    { name = "Bruno Aristimunha Pinto", email = "b.aristimunha@gmail.com" },
    { name = "Robin Tibor Schirrmeister", email = "robintibor@gmail.com" },
]
license = { text = "BSD-3-Clause" }
keywords = [
    "python",
    "deep-learning",
    "neuroscience",
    "pytorch",
    "meg",
    "eeg",
    "neuroimaging",
    "electroencephalography",
    "magnetoencephalography",
    "electrocorticography",
    "ecog",
    "electroencephalogram",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    'Topic :: Software Development :: Build Tools',
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "torchaudio>=2.0",
    'mne>=1.11.0',  # we get matplotlib, numpy, pandas, scipy from here
    'pandas<3.0.0',  # to avoid issues with wfdb
    'mne_bids>=0.18', # in theory we get the mne here, but we prefer to have it explicit
    'h5py',
    'skorch>=1.3.0',
    'joblib',
    'torchinfo',
    'wfdb',                         # we got the requests and pandas from here
    'linear_attention_transformer',
    'docstring_inheritance',        # we get einops from here
    'rotary_embedding_torch',
    'pandas<3.0.0',                 # to avoid incompatibility with wfdb https://github.com/MIT-LCP/wfdb-python/issues/560
]
[project.urls]
homepage = "https://braindecode.org"
repository = "https://github.com/braindecode/braindecode"
documentation = "https://braindecode.org/stable/index.html"

[project.optional-dependencies]
moabb = ["moabb>=1.4.3"]
eegprep = ["eegprep[eeglabio]>=0.2.23"]
hub = ["huggingface_hub[torch]>=0.20.0", "zarr>=3.0"]
tests = [
    'pytest',
    'pytest-cov',
    'codecov',
    'pytest_cases',
    'mypy',
    "transformers>=4.57.0",
    "bids_validator",
]
typing = [
    'exca>=0.5.10',
    'numpydantic>=1.7',
]

docs = [
    'sphinx_gallery',
    'sphinx_rtd_theme',
    'sphinx-autodoc-typehints',
    'sphinx-autobuild',
    'sphinxcontrib-bibtex',
    'sphinx_sitemap',
    'pydata_sphinx_theme',
    'numpydoc',
    'memory_profiler',
    'pillow',
    'ipython',
    'sphinx_design',
    'lightning',
    'seaborn',
    'pre-commit',
    'openneuro-py',
    'plotly',
    'shap',
    'nbformat',
    'transformers',
]

all = [
    "braindecode[moabb]",
    "braindecode[tests]",
    "braindecode[docs]",
    "braindecode[hub]",
    "braindecode[eegprep]",
    "braindecode[typing]",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
version = { attr = "braindecode.version.__version__" }

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "braindecode*",
] # package names should match these glob patterns (["*"] by default)
exclude = [] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff]
lint.ignore-init-module-imports = true
line-length = 88
target-version = "py311"


[tool.isort]
skip = [".gitignore"]
skip_glob = ["test/*", "examples/*"]
py_version = 311
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["braindecode"]
lines_between_sections = 1

[tool.pytest.ini_options]
testpaths = ["test"]
# which files count as test modules
python_files = ["test_*.py", "*_test.py"]
# which functions inside them count as tests
python_functions = ["test_*"]
